--- a/assignment-1.html
+++ b/assignment-1.html
@@ -22,7 +22,7 @@
         </tr>
         <tr>
             <td>Gender</td>
-            <td><input type="radio">male &nbsp;<input type="radio">female</td>
+            <td><input type="radio" name="gender">male &nbsp;<input type="radio" name="gender">female</td>
         </tr>
         <tr>
             <td>Dance Type:</td>
