--- a/assignment-3.html
+++ b/assignment-3.html
@@ -36,8 +36,8 @@
       <tr>
         <td>please specify <br />your role</td>
         <td>
-          <input type="radio" />admin <input type="radio" />engineer
-          <input type="radio" />manager <input type="radio" />guest
+          <input type="radio" name="please specify" />admin <input type="radio" name="please specify" />engineer
+          <input type="radio" name="please specify" />manager <input type="radio" name="please specify" />guest
         </td>
       </tr>
       <tr>
