--- a/assignment-2.html
+++ b/assignment-2.html
@@ -18,7 +18,7 @@
         </tr>
         <tr>
             <td>gender</td>
-            <td><input type="radio">male <br> <input type="radio">female</td>
+            <td><input type="radio" name="gender">male <br> <input type="radio" name="gender">female</td>
         </tr>
         <tr>
             <td>Eye color</td>
